@@ -1,4 +1,4 @@
-Cmnd_Alias LCS = /usr/share/lcs/scripts/mkhdir.sh, /usr/share/lcs/scripts/webperso.sh, /usr/share/lcs/scripts/chacces.sh
+Cmnd_Alias LCS = /usr/share/lcs/scripts/mkhdir.sh, /usr/share/lcs/scripts/webperso.sh, /usr/share/lcs/scripts/chacces.sh, /usr/share/lcs/scripts/createmaildir.sh
 Cmnd_Alias LCS1 = /usr/share/lcs/scripts/action.sh, /usr/share/lcs/scripts/edit_params.sh, /usr/share/lcs/sbin/delHome.pl, /usr/share/lcs/sbin/userDel.pl
 Cmnd_Alias LCS2 = /usr/share/lcs/scripts/mkSlapdConf.sh, /usr/share/lcs/sbin/mkslurpd
 Cmnd_Alias PLUGINS = /usr/share/lcs/scripts/execution_script_plugin.sh
