@@ -1,0 +1,1 @@
+Cr&eacute;ation Maildir,/Admin/createmaildir.php,lcs_is_admin
