@@ -18,6 +18,7 @@ lcs-web (2.4.8~3) Lcs; urgency=low
   * Modify applis.php and accueil.php for filexplorer module
   * Modify barre.php for roundcube webmail
   * Add cron.weekly task lcs-clean-sessions
+  * Add scripts to create all Maildir users
 
   [ Raphaël Hertzog ]
   * Remove /tmp/{applilcs,moduleslcs}.xml before calling wget otherwise wget
@@ -38,7 +39,7 @@ lcs-web (2.4.8~3) Lcs; urgency=low
   [ Cyril Bouthors ]
   * Added support for hooks in /usr/share/lcs/lcs-web-hooks.d
 
- -- Jean-Luc Chrétien <jean-luc.chretien@tice.ac-caen.fr>  Fri, 21 Jan 2011 10:48:04 +0100
+ -- Jean-Luc Chrétien <jean-luc.chretien@tice.ac-caen.fr>  Sat, 22 Jan 2011 16:08:19 +0100
 
 lcs-web (2.4.7) Lcs; urgency=low
 
